# rust-logi

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  build.rs  convert_and_import.py  deploy.sh  incremental_import.py  start-proxy.sh  start.sh
.claude/: settings.json
.sqlx/: query-cb54263544e7ab6b880c5b21ea572beb8fc204b4b90fbb74e3e408c91e113996.json
docs/: auth-unification-plan.md  browser-render-integration-plan.md  cam-sync-migration-plan.md  car-inspection-date-fields.md  file-car-inspection-linkage.md  kudguri-gcs-migration-plan.md  lineworks-rich-menu-api.md  rust-logi-alc-api-relationship.md
handover/: 2026-02-21_02-52.md  2026-02-21_03-10.md  2026-02-21_14-59.md  2026-02-21_16-52.md  2026-02-21_17-23.md  2026-02-21_18-34.md  2026-02-22_06-19.md  2026-02-22_07-05.md  2026-02-22_10-30.md  2026-02-22_17-08.md  2026-02-23_17-50.md  2026-02-23_19-30.md  2026-02-23_20-30.md  2026-02-25_03-20.md  2026-02-25_05-00.md  2026-02-25_13-45.md  2026-02-25_14-35.md  2026-03-20_auth-unification.md  2026-03-20_carins-migration.md
infra/: README.md  s3-lifecycle-policy.json
migrations/: 00001_create_organizations.sql  00002_create_files.sql  00003_create_car_inspection.sql  00004_create_ichiban_cars.sql  00005_create_kudguri.sql  00006_create_misc_tables.sql  00007_rls_helper_functions.sql  00008_add_s3_storage.sql  00009_add_file_access_tracking.sql  00010_create_data_archives.sql  00011_add_list_current_indexes.sql  00012_add_grantdate_index.sql  00013_improve_rls_policies.sql  00014_create_dtakologs.sql  00015_create_dvr_notifications.sql  00016_update_dvr_notifications_rls_to_uuid.sql  00017_add_dvr_mp4_storage.sql  00018_force_rls_on_all_tables.sql  00019_create_flickr_photo.sql  00020_create_api_users_and_tokens.sql  00021_fix_api_users_rls_for_login.sql  00022_create_password_credentials.sql  00023_create_pending_car_inspection_pdfs.sql  00024_create_lineworks_oauth_configs.sql  00025_create_roles_permissions.sql  00026_add_woff_id_to_sso_provider_configs.sql  00027_create_bot_configs.sql  00028_create_access_requests.sql  00029_create_items.sql  00030_add_url_to_items.sql  00031_add_item_type_to_items.sql  00032_sso_resolve_functions.sql  00033_add_rls_and_fix_views.sql  00034_auth_security_definer_functions.sql  00035_create_car_inspection_nfc_tags.sql  README.md
plans/: 2026-02-22_06-08_org-slug-personal-items.md
proto/: common.proto  files.proto
scripts/: migrate_to_gcs.py  migrate_to_s3.rs
src/: config.rs  error.rs  google_auth.rs  http_client.rs  lib.rs  main.rs
src/db/: mod.rs  pool.rs  (+1 more)
test/: package-lock.json  package.json  test-dvr-notification.ts
(+52 files in other folders)
