[package]
name = "rust-logi"
version = "0.1.0"
edition = "2021"
authors = ["yhonda"]
description = "gRPC-Web API server for logistics management"

[dependencies]
# gRPC
tonic = "0.12"
tonic-web = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Google Cloud Storage (using rustls for musl compatibility)
google-cloud-storage = { version = "0.22", default-features = false, features = ["rustls-tls", "auth"] }

# HTTP/Tower
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http = "1"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "rust-logi"
path = "src/main.rs"
